# Beer_Review_NLP

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: Wrangling_Taxi_Data.md  mkdocs.yml
docs/docs/: index.md
notebooks/: Beer_Review_Capstone3_Data_Wrangling.ipynb  Beer_Review_Capstone3_EDA.ipynb  Data Wrangling.ipynb  Preproccessing_Model.ipynb  Untitled.ipynb  Wrangling_Taxi_Data.ipynb  partial.csv
